--- a/index.html
+++ b/index.html
@@ -34,4 +34,33 @@
         <a href="https://instagram.com/EcoPotsChile" target="_blank">Visítanos en Instagram</a>
     </section>
 </body>
+
+    <section id="catalogo" style="padding: 2rem; background-color: #f0f0f0; text-align: center;">
+    <h2>🌿 Nuestro Catálogo 🌿</h2>
+    <p>Explora nuestros maceteros personalizados y sostenibles. Cada uno cuenta una historia de reciclaje y diseño.</p>
+    <div style="display: flex; justify-content: center; gap: 2rem; flex-wrap: wrap;">
+        <!-- Producto 1 -->
+        <div style="width: 300px; background: white; padding: 1rem; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
+            <img src="URL_DE_IMAGEN_1" alt="Macetero 1" style="width: 100%; border-radius: 8px;">
+            <h3>Macetero Personalizado</h3>
+            <p>Ideal para regalos únicos y especiales. Fabricado con plástico reciclado.</p>
+            <p><strong>$15,000 CLP</strong></p>
+        </div>
+        <!-- Producto 2 -->
+        <div style="width: 300px; background: white; padding: 1rem; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
+            <img src="URL_DE_IMAGEN_2" alt="Macetero 2" style="width: 100%; border-radius: 8px;">
+            <h3>Macetero Minimalista</h3>
+            <p>Perfecto para decorar espacios modernos y sostenibles.</p>
+            <p><strong>$12,000 CLP</strong></p>
+        </div>
+        <!-- Producto 3 -->
+        <div style="width: 300px; background: white; padding: 1rem; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
+            <img src="URL_DE_IMAGEN_3" alt="Macetero 3" style="width: 100%; border-radius: 8px;">
+            <h3>Macetero Natural</h3>
+            <p>Un toque rústico y ecológico para tus plantas favoritas.</p>
+            <p><strong>$10,000 CLP</strong></p>
+        </div>
+    </div>
+</section>
+
 </html>
