--- a/index.html
+++ b/index.html
@@ -33,9 +33,13 @@
         <p>EcoPots Chile combina innovación, sostenibilidad y diseño para crear soluciones decorativas y responsables con el medio ambiente.</p>
         <a href="https://instagram.com/EcoPotsChile" target="_blank">Visítanos en Instagram</a>
     </section>
+    <nav style="text-align: center; padding: 1rem; background-color: #4CAF50; color: white;">
+    <a href="#catalogo" style="margin: 0 1rem; color: white; text-decoration: none;">Catálogo</a>
+    <a href="#contacto" style="margin: 0 1rem; color: white; text-decoration: none;">Contacto</a>
+</nav>
 </body>
 
-    <section id="catalogo" style="padding: 2rem; background-color: #f0f0f0; text-align: center;">
+<section id="catalogo" style="padding: 2rem; background-color: #f0f0f0; text-align: center;">
     <h2>🌿 Nuestro Catálogo 🌿</h2>
     <p>Explora nuestros maceteros personalizados y sostenibles. Cada uno cuenta una historia de reciclaje y diseño.</p>
     <div style="display: flex; justify-content: center; gap: 2rem; flex-wrap: wrap;">
