--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
     <div style="display: flex; justify-content: center; gap: 2rem; flex-wrap: wrap;">
         <!-- Producto 1 -->
         <div style="width: 300px; background: white; padding: 1rem; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
-            <img src="URL_DE_IMAGEN_1" alt="Macetero 1" style="width: 100%; border-radius: 8px;">
-            <h3>Macetero Personalizado</h3>
-            <p>Ideal para regalos únicos y especiales. Fabricado con plástico reciclado.</p>
+            <img src="20241227_160738.jpg" alt="Macetero 1" style="width: 100%; border-radius: 8px;">
+            <h3>Macetero Grande</h3>
+            <p>Ideal para regalos únicos y especiales de la grandeza merecida. Fabricado con plástico reciclado.</p>
             <p><strong>$15,000 CLP</strong></p>
         </div>
         <!-- Producto 3 -->
         <div style="width: 300px; background: white; padding: 1rem; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
-            <img src="URL_DE_IMAGEN_3" alt="Macetero 3" style="width: 100%; border-radius: 8px;">
-            <h3>Macetero Natural</h3>
-            <p>Un toque rústico y ecológico para tus plantas favoritas.</p>
+            <img src="20241227_160808.jpg" alt="Macetero 3" style="width: 100%; border-radius: 8px;">
+            <h3>Macetero Pequeño</h3>
+            <p>Un toque rústico y minimalista para tus plantas favoritas.</p>
             <p><strong>$10,000 CLP</strong></p>
         </div>
     </div>
