--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
             background-color: #4CAF50;
             color: white;
             padding: 1rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 1rem;
+        }
+        header img {
+            height: 60px; /* Ajusta el tamaño del logo según sea necesario */
         }
         section {
             padding: 2rem;
@@ -25,8 +32,8 @@
 </head>
 <body>
     <header>
+        <img src="WhatsApp_Image_2024-11-24_at_22.07.30-removebg-preview (1).png" alt="Logo EcoPots Chile">
         <h1>EcoPots Chile</h1>
-        <p>Transformamos plástico reciclado en maceteros únicos y sostenibles 🌱</p>
     </header>
     <section>
         <h2>¿Quiénes somos?</h2>
@@ -34,30 +41,29 @@
         <a href="https://instagram.com/EcoPotsChile" target="_blank">Visítanos en Instagram</a>
     </section>
     <nav style="text-align: center; padding: 1rem; background-color: #4CAF50; color: white;">
-    <a href="#catalogo" style="margin: 0 1rem; color: white; text-decoration: none;">Catálogo</a>
-    <a href="#contacto" style="margin: 0 1rem; color: white; text-decoration: none;">Contacto</a>
-</nav>
+        <a href="#catalogo" style="margin: 0 1rem; color: white; text-decoration: none;">Catálogo</a>
+        <a href="#contacto" style="margin: 0 1rem; color: white; text-decoration: none;">Contacto</a>
+    </nav>
+    <section id="catalogo" style="padding: 2rem; background-color: #f0f0f0; text-align: center;">
+        <h2>🌿 Nuestro Catálogo 🌿</h2>
+        <p>Explora nuestros maceteros personalizados y sostenibles. Cada uno cuenta una historia de reciclaje y diseño.</p>
+        <div style="display: flex; justify-content: center; gap: 2rem; flex-wrap: wrap;">
+            <!-- Producto 1 -->
+            <div style="width: 200px; background: white; padding: 1rem; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
+                <img src="20241227_160738.jpg" alt="Macetero 1" style="width: 100%; border-radius: 8px;">
+                <h3>Macetero Grande</h3>
+                <p>Ideal para regalos únicos y especiales de la grandeza merecida. Fabricado con plástico reciclado.</p>
+                <p><strong>$6,500 CLP</strong></p>
+            </div>
+            <!-- Producto 3 -->
+            <div style="width: 300px; background: white; padding: 1rem; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
+                <img src="20241227_160808.jpg" alt="Macetero 3" style="width: 100%; border-radius: 8px;">
+                <h3>Macetero Pequeño</h3>
+                <p>Un toque rústico y minimalista para tus plantas favoritas.</p>
+                <p><strong>$5,000 CLP</strong></p>
+            </div>
+        </div>
+    </section>
 </body>
-
-<section id="catalogo" style="padding: 2rem; background-color: #f0f0f0; text-align: center;">
-    <h2>🌿 Nuestro Catálogo 🌿</h2>
-    <p>Explora nuestros maceteros personalizados y sostenibles. Cada uno cuenta una historia de reciclaje y diseño.</p>
-    <div style="display: flex; justify-content: center; gap: 2rem; flex-wrap: wrap;">
-        <!-- Producto 1 -->
-        <div style="width: 200px; background: white; padding: 1rem; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
-            <img src="20241227_160738.jpg" alt="Macetero 1" style="width: 100%; border-radius: 8px;">
-            <h3>Macetero Grande</h3>
-            <p>Ideal para regalos únicos y especiales de la grandeza merecida. Fabricado con plástico reciclado.</p>
-            <p><strong>$6,500 CLP</strong></p>
-        </div>
-        <!-- Producto 3 -->
-        <div style="width: 300px; background: white; padding: 1rem; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
-            <img src="20241227_160808.jpg" alt="Macetero 3" style="width: 100%; border-radius: 8px;">
-            <h3>Macetero Pequeño</h3>
-            <p>Un toque rústico y minimalista para tus plantas favoritas.</p>
-            <p><strong>$5,000 CLP</strong></p>
-        </div>
-    </div>
-</section>
-
 </html>
+
