--- a/index.html
+++ b/index.html
@@ -23,10 +23,17 @@
             gap: 1rem;
         }
         header img {
-            height: 60px; /* Ajusta el tamaño del logo según sea necesario */
+            height: 100px; /* Tamaño del logo ajustado */
         }
         section {
             padding: 2rem;
+        }
+        .section-container {
+            background-color: #e8f5e9;
+            padding: 2rem;
+            margin: 1rem 0;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
     </style>
 </head>
@@ -39,6 +46,12 @@
         <h2>¿Quiénes somos?</h2>
         <p>EcoPots Chile combina innovación, sostenibilidad y diseño para crear soluciones decorativas y responsables con el medio ambiente.</p>
         <a href="https://instagram.com/EcoPotsChile" target="_blank">Visítanos en Instagram</a>
+    </section>
+    <section class="section-container">
+        <h2>Misión</h2>
+        <p>Transformar plástico reciclado en maceteros únicos y sostenibles que inspiren la conciencia ambiental y embellezcan los hogares de nuestros clientes.</p>
+        <h2>Visión</h2>
+        <p>Ser líderes en innovación sostenible, promoviendo un futuro donde el diseño y la responsabilidad ambiental se unan para crear un impacto positivo en el planeta.</p>
     </section>
     <nav style="text-align: center; padding: 1rem; background-color: #4CAF50; color: white;">
         <a href="#catalogo" style="margin: 0 1rem; color: white; text-decoration: none;">Catálogo</a>
@@ -66,4 +79,5 @@
     </section>
 </body>
 </html>
+
 
