--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
+        .section-container h2 {
+            color: #2e7d32;
+        }
     </style>
 </head>
 <body>
@@ -49,9 +52,9 @@
     </section>
     <section class="section-container">
         <h2>Misión</h2>
-        <p>Transformar plástico reciclado en maceteros únicos y sostenibles que inspiren la conciencia ambiental y embellezcan los hogares de nuestros clientes.</p>
+        <p>Crear soluciones sostenibles y personalizadas en el diseño de maceteros impresos en 3D, utilizando plástico reciclado para transformar residuos en estética funcional. Nuestro propósito es promover la conciencia ambiental, reducir la contaminación y adornar los espacios de nuestros clientes con productos únicos y responsables.</p>
         <h2>Visión</h2>
-        <p>Ser líderes en innovación sostenible, promoviendo un futuro donde el diseño y la responsabilidad ambiental se unan para crear un impacto positivo en el planeta.</p>
+        <p>Ser líderes en innovación y sostenibilidad en el mercado de productos decorativos ecológicos, inspirando a comunidades y empresas a adoptar prácticas responsables que contribuyan a un futuro más limpio, verde y consciente.</p>
     </section>
     <nav style="text-align: center; padding: 1rem; background-color: #4CAF50; color: white;">
         <a href="#catalogo" style="margin: 0 1rem; color: white; text-decoration: none;">Catálogo</a>
@@ -79,5 +82,6 @@
     </section>
 </body>
 </html>
+
 
 
